collapse/expand v3 - positioning, renaming, fixes

--- a/css/item.css
+++ b/css/item.css
@@ -6,7 +6,7 @@
 	opacity: 0.5;
 }
 
-.item.collapsed .children, .item.collapsed canvas {
+.item.collapsed .children {
 	display: none;
 }
 
@@ -74,15 +74,22 @@ canvas {
 
 .toggle {
 	position: absolute;
-	width: 15px;
-	height: 15px;
-	line-height: 15px;
+	width: 12px;
+	height: 12px;
+	line-height: 12px;
 	cursor: pointer;
 	border-radius: 50%;
+	border: 1px solid #00f;
 	background-color: #88f;
 	text-align: center;
 	font-weight: bold;
 	font-family: sans-serif;
+	color: #fff;
+	opacity: 0.7;
+}
+
+.toggle:hover {
+	opacity: 1;
 }
 
 .toggle:before {
@@ -94,5 +101,6 @@ canvas {
 }
 
 :not(.current):not(.collapsed) > .toggle {
-	display: none;
+	/* NOT display:none - we need to have non-zero dimensions for layouting */
+	visibility: hidden;
 }
